# SensorPoolQt

./: CMakeLists.txt  README.md  closablewidget.cpp  closablewidget.h  db.json  isensorconverter.cpp  isensorconverter.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  sensor.cpp  sensor.h  sensormodel.cpp  sensormodel.h  sensorport.cpp  sensorport.h  sensorproperties.cpp  sensorproperties.h  sensorproperties.ui  sensorsettings.cpp  sensorsettings.h  sensorsettings.ui  settings.cpp  settings.h  settingsdlg.cpp  settingsdlg.h  settingsdlg.ui  themeicons.cpp  themeicons.h  themeicons.ui  units.json
